---
source: c2rust-refactor/tests/snapshots.rs
assertion_line: 56
expression: c2rust-refactor fix_unused_unsafe --rewrite-mode alongside -- tests/snapshots/fix_unused_unsafe.rs --edition 2021
---
fn main() {
    // Has unsafe operations, shouldn't be modified.
    unsafe {
        let val = 123;
        let ptr = &val as *const i32;
        let _safe_val = *ptr;
    }

    // Block expr with no comment and no destructors, block should be
    // removed but contents kept.
    let x = 42;

    // Empty block expr should stay a block, empty block statement can be
    // removed entirely.
    let _ = {};

    // Has a comment, shouldn't be removed.
    {}

    {
        // Contains a destructor, keep the block to avoid changing drop order.
        let _string = String::from("string");
    }

    // Block expr with no statements, we can remove the block.
    let _ = 5 + 5;

    let _ = {
        // Comment on the tail expr, keep the block because it's not easy to
        // lift the comment to the outer statement.
        5 + 5
    };

    // Block expr with statements, keep the block.
    let _ = {
        let _ = 5;
        5 + 5
    };

    unsafe {
        // Contains a comment but no body. We have to keep leave the block the
        // same, because attempting to change it causes us to delete the
        // comment.
    }

    unsafe {
        // Inner statement with a trailing comment, make sure we don't modify
        // the block in a way that deletes the comment.
        let _ = ();

        // Dangling comment with no AST node to attach to.
    }

    {
        // Nested unsafe blocks. Not that hard to handle, but also not a
        // case that we need to cover since c2rust doesn't generate code
        // like this and later refactoring is unlikely to introduce it.
        let y = 99;
    }

    // Trailing expr in an unsafe block used as a statement, make sure we

    // don't just remove the block since that would turn the statement into

    // an expression.

    // TODO: Why is there extra whitespace between lines of the comment?

    1 + 2;
}

// In a generic context, all non-`Copy` type params show up as requiring drop,
// so we won't be able to fully remove the block.
fn generic_non_copy<T: Default>() {
    {
        let _val = T::default();
    }
}

// If the type parameter is `Copy` then we should be able to remove the block.
fn generic_copy<T: Copy + Default>() {
    let _val = T::default();
}
